force-app/main/default/objects/Salesforce_Assist_Question_Answer__c/Salesforce_Assist_Question_Answer__c.object-meta.xml
<CustomObject>
    <label>Salesforce Assist Question/Answer</label>
    <nameField>
        <displayFormat>SA-{0000}</displayFormat>
        <label>Salesforce Assist Question/Answer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Salesforce Assist Question/Answers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>