force-app/main/default/objects/Salesforce_Assist_Question_Answer__c/fields/Account_Business_Process__c.field-meta.xml
<CustomField>
    <fullName>Account_Business_Process__c</fullName>
    <label>Account Business Process</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>