force-app/main/default/objects/Salesforce_Assist_Question_Answer__c/fields/Account_Q_1__c.field-meta.xml
<CustomField>
    <fullName>Account_Q_1__c</fullName>
    <inlineHelpText>Are Accounts used in other custom object?</inlineHelpText>
    <label>Account Q.1</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>