force-app/main/default/objects/Salesforce_Assist_Question_Answer__c/fields/Contact_Business_Process__c.field-meta.xml
<CustomField>
    <fullName>Contact_Business_Process__c</fullName>
    <label>Contact Business Process</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>