force-app/main/default/objects/Salesforce_Assist_Question_Answer__c/fields/Contact_Q_1__c.field-meta.xml
<CustomField>
    <fullName>Contact_Q_1__c</fullName>
    <inlineHelpText>Are Contact used in other custom object?</inlineHelpText>
    <label>Contact Q.1</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>