force-app/main/default/objects/Salesforce_Assist_Question_Answer__c/fields/Contact_Q_3__c.field-meta.xml
<CustomField>
    <fullName>Contact_Q_3__c</fullName>
    <inlineHelpText>How many page layouts are there in this object?</inlineHelpText>
    <label>Contact Q.3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>