force-app/main/default/objects/Salesforce_Assist_Question_Answer__c/fields/Lead_Business_Process__c.field-meta.xml
<CustomField>
    <fullName>Lead_Business_Process__c</fullName>
    <description>This field used to contains business process data.</description>
    <label>Lead Business Process</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>