force-app/main/default/objects/Salesforce_Assist_Question_Answer__c/fields/Lead_Q_1__c.field-meta.xml
<CustomField>
    <fullName>Lead_Q_1__c</fullName>
    <inlineHelpText>If activities are being used anywhere in the LEADS object.</inlineHelpText>
    <label>Lead Q.1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>