force-app/main/default/objects/Salesforce_Assist_Question_Answer__c/fields/Lead_Q_2__c.field-meta.xml
<CustomField>
    <fullName>Lead_Q_2__c</fullName>
    <inlineHelpText>How the leads progress through the status.</inlineHelpText>
    <label>Lead Q.2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>