force-app/main/default/objects/Salesforce_Assist_Question_Answer__c/fields/Lead_Q_3__c.field-meta.xml
<CustomField>
    <fullName>Lead_Q_3__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Are leads being converted?</inlineHelpText>
    <label>Lead Q.3</label>
    <type>Checkbox</type>
</CustomField>