force-app/main/default/objects/Salesforce_Assist_Question_Answer__c/fields/Opportunity_Q_1__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Q_1__c</fullName>
    <inlineHelpText>Are products being related to the opportunity object (Give a percentage of opportunities which have products related to it)?</inlineHelpText>
    <label>Opportunity Q.1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>