force-app/main/default/objects/Salesforce_Assist_Question_Answer__c/fields/Opportunity_Q_2__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Q_2__c</fullName>
    <inlineHelpText>If activities are being used anywhere in the Opportunity object.</inlineHelpText>
    <label>Opportunity Q.2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>