force-app/main/default/objects/Salesforce_Assist_Question_Answer__c/fields/Opportunity_Q_3__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Q_3__c</fullName>
    <inlineHelpText>What is the path for the opportunity object?</inlineHelpText>
    <label>Opportunity Q.3</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>